# simhwa

./: db.sqlite3  manage.py  pyproject.toml
.github/workflows/: ci.yml
simhwa/: asgi.py  settings.py  urls.py  wsgi.py
simhwa/tests/: test_view.py
